fix-ui - make build count visible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2884,14 +2884,15 @@ td {
 }
 
 #buildCount {
-  position: sticky;
+  position: absolute;
   top: 0;
   right: 0;
   text-align: right;
   background-color: #2c2c2c;
+  color: #e0e0e0;
   padding: 4px 8px;
   font-size: 14px;
-  z-index: 2;
+  z-index: 3;
 }
 
 /* Chrome, Safari */
